Implement TelegramLongPollingBot methods

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,7 @@ nb-configuration.xml
 ## OS X
 ##############################
 .DS_Store
+##############################
+## System
+##############################
+.env
